[gd_scene load_steps=2 format=3 uid="uid://d2h8k5pqyarwe"]

[ext_resource type="Script" path="res://scenes/ui/screens/CharacterScreen.gd" id="1_char"]

[node name="CharacterScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_char")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="CharacterNameLabel" type="Label" parent="MarginContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Karakter Adı"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Seviye 1"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="ExpPanel" type="PanelContainer" parent="MarginContainer/VBox/Header"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/Header/ExpPanel"]
layout_mode = 2

[node name="ExpLabel" type="Label" parent="MarginContainer/VBox/Header/ExpPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 100 EXP"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="ExpBar" type="ProgressBar" parent="MarginContainer/VBox/Header/ExpPanel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="StatsPanel" type="PanelContainer" parent="MarginContainer/VBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/StatsPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/StatsPanel/VBox"]
layout_mode = 2
text = "İstatistikler"
theme_override_font_sizes/font_size = 28

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/StatsPanel/VBox"]
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/StatsPanel/VBox"]
layout_mode = 2
columns = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/StatsPanel/VBox/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "Can: 100"
theme_override_font_sizes/font_size = 22

[node name="AttackLabel" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/StatsPanel/VBox/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "Saldırı: 10"
theme_override_font_sizes/font_size = 22

[node name="DefenseLabel" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/StatsPanel/VBox/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "Savunma: 10"
theme_override_font_sizes/font_size = 22

[node name="LuckLabel" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/StatsPanel/VBox/StatsGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "Şans: 5"
theme_override_font_sizes/font_size = 22

[node name="ResourcesPanel" type="PanelContainer" parent="MarginContainer/VBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/ResourcesPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/ResourcesPanel/VBox"]
layout_mode = 2
text = "Kaynaklar"
theme_override_font_sizes/font_size = 28

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/ResourcesPanel/VBox"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/ResourcesPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0 Altın"
theme_override_font_sizes/font_size = 22

[node name="EnergyLabel" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/ResourcesPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 100 Enerji"
theme_override_font_sizes/font_size = 22

[node name="ToleranceLabel" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/ResourcesPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "100 / 100 Tolerans"
theme_override_font_sizes/font_size = 22

[node name="EquipmentPanel" type="PanelContainer" parent="MarginContainer/VBox/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/EquipmentPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/EquipmentPanel/VBox"]
layout_mode = 2
text = "Ekipman"
theme_override_font_sizes/font_size = 28

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/EquipmentPanel/VBox"]
layout_mode = 2

[node name="EquipmentContainer" type="VBoxContainer" parent="MarginContainer/VBox/ScrollContainer/ContentVBox/EquipmentPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="ButtonsHBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatsButton" type="Button" parent="MarginContainer/VBox/ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
text = "Detaylı İstatistikler"
theme_override_font_sizes/font_size = 20

[node name="SkillsButton" type="Button" parent="MarginContainer/VBox/ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
text = "Yetenekler"
theme_override_font_sizes/font_size = 20

[node name="AchievementsButton" type="Button" parent="MarginContainer/VBox/ButtonsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
text = "Başarımlar"
theme_override_font_sizes/font_size = 20
